--- a/views/layout_invert.pug
+++ b/views/layout_invert.pug
@@ -16,10 +16,12 @@ html
     block css
   body
     .gtr-header-invert
-      .d-flex.justify-content-between
+      .d-flex.justify-content-between.align-items-center.flex-wrap.gtr-header__inner
         a.navbar-brand(href="/")
           img(src="/images/gotur_vip_logo.png" alt="GÖTÜR")
-        .d-flex.gap-3.align-items-center
+        button.gtr-header__toggle(type='button' aria-label='Menüyü Aç' aria-controls='gtrHeaderLinks' aria-expanded='false')
+          i.fa-solid.fa-bars
+        .d-flex.gap-3.align-items-center.gtr-header__links#gtrHeaderLinks
           a.gtr-link#findMyTicket(href='/find-ticket')
             i.fa-solid.fa-magnifying-glass.me-1
             |Biletimi Bul
@@ -27,17 +29,15 @@ html
             a.gtr-link#myTrips(href='/user/my-trips' role='button')
               i.fa-solid.fa-road.me-1
               |Seyahatlerim
-            .dropdown
-              a.gtr-link.dropdown-toggle#myAccount(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
-                i.fa-solid.fa-user.me-1
-                |Hesabım
-              ul.dropdown-menu.dropdown-menu-end(aria-labelledby='myAccount')
-                li
-                  a.dropdown-item#accountPersonalInfo(href='/user?section=personal') Kişisel Bilgilerim
-                li
-                  a.dropdown-item#accountCards(href='/user?section=cards') Kartlarım
-                li
-                  a.dropdown-item#accountPassengers(href='/user?section=passengers') Yolcularım
+            a.gtr-link#accountPersonalInfo(href='/user?section=personal' role='button')
+              i.fa-solid.fa-user.me-1
+              |Hesabım
+            a.gtr-link#accountCards(href='/user?section=cards' role='button')
+              i.fa-solid.fa-id-card.me-1
+              |Kartlarım
+            a.gtr-link#accountPassengers(href='/user?section=passengers' role='button')
+              i.fa-solid.fa-user-group.me-1
+              |Yolcularım
             a.gtr-link#logoutButton(href='#' role='button')
               i.fa-solid.fa-right-from-bracket.me-1
               |Çıkış Yap
@@ -48,7 +48,7 @@ html
             a.gtr-link(href='javascript:void(0)' role='button' data-popup-open='registerPopup')
               i.fa-solid.fa-user-plus.me-1
               |Kayıt Ol
-      p Türkiye'nin En Yeni Online Yazıhanesi
+      p.slogan Türkiye'nin En Yeni Online Yazıhanesi
       block headerContent
 
 
@@ -63,4 +63,5 @@ html
     script(src="/flatpickr/dist/flatpickr.min.js")
     script(src="/flatpickr/dist/l10n/tr.js")
     script(src="/js/place-select.js")
+    script(src="/js/header.js")
     block scripts
