--- a/views/layout_invert_blog.pug
+++ b/views/layout_invert_blog.pug
@@ -15,10 +15,39 @@ html
     block css
   body
     .gtr-header-invert
-      .d-flex.justify-content-between
+      .d-flex.justify-content-between.align-items-center.flex-wrap.gtr-header__inner
         a.navbar-brand(href="/")
           img(src="/images/gotur_vip_logo.png" alt="GÖTÜR")
-        .d-flex.gap-3.align-items-center
+        button.gtr-header__toggle(type='button' aria-label='Menüyü Aç' aria-controls='gtrHeaderLinks' aria-expanded='false')
+          i.fa-solid.fa-bars
+        .d-flex.gap-3.align-items-center.gtr-header__links#gtrHeaderLinks
+          a.gtr-link#findMyTicket(href='/find-ticket')
+            i.fa-solid.fa-magnifying-glass.me-1
+            |Biletimi Bul
+          if currentUser
+            a.gtr-link#myTrips(href='/user/my-trips' role='button')
+              i.fa-solid.fa-road.me-1
+              |Seyahatlerim
+            a.gtr-link#accountPersonalInfo(href='/user?section=personal' role='button')
+              i.fa-solid.fa-user.me-1
+              |Hesabım
+            a.gtr-link#accountCards(href='/user?section=cards' role='button')
+              i.fa-solid.fa-id-card.me-1
+              |Kartlarım
+            a.gtr-link#accountPassengers(href='/user?section=passengers' role='button')
+              i.fa-solid.fa-user-group.me-1
+              |Yolcularım
+            a.gtr-link#logoutButton(href='#' role='button')
+              i.fa-solid.fa-right-from-bracket.me-1
+              |Çıkış Yap
+          else
+            a.gtr-link(href='javascript:void(0)' role='button' data-popup-open='loginPopup')
+              i.fa-solid.fa-user-check.me-1
+              |Giriş Yap
+            a.gtr-link(href='javascript:void(0)' role='button' data-popup-open='registerPopup')
+              i.fa-solid.fa-user-plus.me-1
+              |Kayıt Ol
+      p.slogan Türkiye'nin En Yeni Online Yazıhanesi
       block headerContent
 
 
@@ -28,4 +57,5 @@ html
     script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js")
     script(src="https://code.jquery.com/jquery-3.7.1.min.js")
+    script(src="/js/header.js")
     block scripts
