--- a/views/index.pug
+++ b/views/index.pug
@@ -104,6 +104,8 @@ html
             img.coming-soon-firm(src="/images/trakya_vip.png" alt="Trakya Vip")
           a(target="_blank" href="https://cortur.com.tr/") 
             img.coming-soon-firm(src="/images/cortur.png" alt="Çortur")
+          a(target="_blank" href="https://arenaturizm.com/") 
+            img.coming-soon-firm(src="/images/arena.png" alt="Arena Turizm")
         //- .coming-soon-marquee.ms-3
         //-   .marquee.marquee--ltr
         //-     p.w-100.text-end.m-0 ...Yapım Aşamasında...
