--- a/public/css/style.css
+++ b/public/css/style.css
@@ -268,8 +268,8 @@ a.gtr-link:active {
     align-self: flex-end;
     color: inherit;
     position: absolute;
-    right: 1rem;
-    top: 0.75rem;
+    right: 0;
+    top: 0;
   }
 
   .gtr-header > .d-flex.justify-content-between,
