--- a/public/css/index.css
+++ b/public/css/index.css
@@ -281,7 +281,7 @@ body {
 
 .attribute-routes__grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(25vw, 1fr));
     gap: 1rem;
 }
 
