--- a/views/trips.pug
+++ b/views/trips.pug
@@ -124,7 +124,7 @@ block content
           )
             .trip_chevron
               i.fa-solid.fa-chevron-down
-            .d-flex.justify-content-between.align-items-center.px-3.mb-2
+            .trip-header.d-flex.justify-content-between.align-items-center.px-3.mb-2
               .d-flex.justify-content-center.col-2
                 img(src=`/images/${t.firm}.png` alt=t.firm)
               .d-flex.justify-content-center.col-2
