--- a/views/trips.pug
+++ b/views/trips.pug
@@ -158,7 +158,7 @@ block content
                       img(src=feature.icon alt=feature.label)
                       span=feature.label
               .d-flex.mt-3
-                .trip-description.col-4
+                .trip-description
                   p.text-center
                     b Sefer Açıklaması
                   p.text-center #{t.routeDescription}
@@ -166,12 +166,12 @@ block content
                     ul.trip_route-list.list-unstyled.mt-3
                       each stopInfo in t.routeTimeline
                         if stopInfo && stopInfo.time && stopInfo.title
-                          li.col-6
+                          li
                             b #{stopInfo.time}
                             |- #{stopInfo.title}
                         else if stopInfo && stopInfo.title
-                          li.col-6 #{stopInfo.title}
-                .trip-seat-plan.col-4
+                          li #{stopInfo.title}
+                .trip-seat-plan
                   .trip_seat-plan.d-flex.justify-content-center.gap-1
                     - const planBinary = t.busPlanBinary
                     - const plan = t.busPlan
@@ -200,7 +200,7 @@ block content
                             - index++;
                           - }
                     - }
-                .trip-seat-info.col-4
+                .trip-seat-info
                   .trip_info.p-1
                     .d-flex
                       .d-flex.align-items-center.gap-1
