--- a/public/css/trips.css
+++ b/public/css/trips.css
@@ -169,7 +169,7 @@
     box-sizing: border-box;
 }
 
-.trip_route-list > li {
+.trip_route-list>li {
     flex: 0 0 50%;
     max-width: 50%;
     padding-left: 0.75rem;
@@ -444,6 +444,36 @@
     }
 
     .trip-header {
+        flex-wrap: wrap;
+    }
+
+    .trip-content_inner {
+        flex-wrap: wrap;
+    }
+
+    .trip-description {
+        flex: 0 0 auto !important;
+        max-width: 100% !important;
+    }
+
+    .trip-seat-plan {
+        flex: 0 0 auto !important;
+        max-width: 100% !important;
+        margin: .5rem 0;
+    }
+
+    .trip-seat-info {
+        flex: 0 0 auto !important;
+        max-width: 100% !important;
+    }
+
+    .trip-seat-info-item {
+        width: 50%;
+        max-width: 50%;
+        flex: 0 0 50%;
+    }
+
+    .trip_info_inner {
         flex-wrap: wrap;
     }
 }
