--- a/views/trips.pug
+++ b/views/trips.pug
@@ -168,7 +168,7 @@ block content
                         if stopInfo && stopInfo.time && stopInfo.title
                           li
                             b #{stopInfo.time}
-                            |- #{stopInfo.title}
+                            |#{" - "} #{stopInfo.title}
                         else if stopInfo && stopInfo.title
                           li #{stopInfo.title}
                 .trip-seat-plan
