--- a/public/css/trips.css
+++ b/public/css/trips.css
@@ -76,6 +76,21 @@
     gap: 0.75rem;
 }
 
+.trip-description_header {
+    margin-bottom: 0.5rem;
+    cursor: default;
+    outline: none;
+}
+
+.trip-description_header:focus-visible {
+    outline: 2px solid #2660ff;
+    outline-offset: 2px;
+}
+
+.trip-description_body {
+    display: block;
+}
+
 .trip_features {
     display: flex;
     flex-wrap: wrap;
@@ -494,6 +509,18 @@
         width: 100%;
         padding-top: 0;
         justify-content: flex-end;
+    }
+
+    .trip-description_header {
+        cursor: pointer;
+    }
+
+    .trip-description_body {
+        display: none;
+    }
+
+    .trip-description.is-open .trip-description_body {
+        display: block;
     }
 }
 
