--- a/views/index.pug
+++ b/views/index.pug
@@ -100,7 +100,7 @@ html
             img.coming-soon-firm(src="/images/anafartalarturizm.png" alt="Anafartalar Turizm")
           a(target="_blank" href="https://bigakale.com.tr/") 
             img.coming-soon-firm(src="/images/bigakale.png" alt="Biga Kale")
-          a(target="_blank" href="https://https://trakyavip.com.tr/") 
+          a(target="_blank" href="https://trakyavip.com.tr/") 
             img.coming-soon-firm(src="/images/trakya_vip.png" alt="Trakya Vip")
           a(target="_blank" href="https://cortur.com.tr/") 
             img.coming-soon-firm(src="/images/cortur.png" alt="Çortur")
