--- a/public/css/trips.css
+++ b/public/css/trips.css
@@ -438,6 +438,7 @@
     .trip-search {
         flex-wrap: wrap;
         padding: 1.2rem 1.5rem;
+        margin-top: 0;
     }
 
     .trip-search_button {
@@ -469,6 +470,7 @@
     .trip-description {
         flex: 0 0 auto !important;
         max-width: 100% !important;
+        width: 100% !important;
     }
 
     .trip-seat-plan {
@@ -509,6 +511,7 @@
         width: 100%;
         padding-top: 0;
         justify-content: flex-end;
+        display: none;
     }
 
     .trip-description_header {
